fixed overflow of nav title for <=320 devices & styled benjamin.website on portfolio & prod-rebuild

--- a/src/styles.css
+++ b/src/styles.css
@@ -1496,7 +1496,7 @@ td{
 		font-size: 3.8vw;
 	}
 	.navbar-brand{
-		font-size: 1rem;
+		font-size: 0.95rem;
 	}
 	.shrinkH4{
 		font-size: .8em;
